syntax = "proto3";

package grpcweb;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "internal/services/link/domain/link/v1/link.proto";

option go_package = "./;grpcweb";

service Link {
    rpc GetLinks(ListRequest) returns (domain.link.v1.Links) {
        option(google.api.http) = {
        get: "/api/links"
      };
    };

    rpc GetLink(domain.link.v1.Link) returns (domain.link.v1.Link) {
        option(google.api.http) = {
        get: "/api/link/{hash}"
      };
    };

    rpc CreateLink(domain.link.v1.Link) returns (domain.link.v1.Link) {
        option(google.api.http) = {
        post: "/api"
        body: "*"
      };
    };

    rpc DeleteLink(domain.link.v1.Link) returns (google.protobuf.Empty) {
        option(google.api.http) = {
        delete: "/api/{hash}"
      };
    };
}

message ListRequest {
  domain.link.v1.Link link = 1;

  string filter = 2;
}
