syntax = "proto3";

package link_rpc;

option go_package = "github.com/batazor/shortlink/internal/link/infrastructure/link_rpc";

import "google/protobuf/empty.proto";
import "link.proto";

service Link {
  rpc Get(GetRequest) returns(link.Link) {}
  rpc List(ListRequest) returns(link.Links) {}
  rpc Add(link.Link) returns(link.Link) {}
  rpc Update(link.Link) returns(link.Link) {}
  rpc Delete(DeleteRequest) returns(google.protobuf.Empty) {}
}

message GetRequest {
  string hash = 1;
}

message ListRequest {
  string filter = 1;
}

message DeleteRequest {
  string hash = 1;
}
